--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -7,7 +7,7 @@ man_MANS = joe.1
 EXTRA_DIST = joe.1.in
 
 joe.1 : joe.1.in
-	sed 's,@JOERC\@,$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(bindir),' $< > $@
+	sed 's,@JOERC\@,$(sysconf_joedir),; s,@SPELL\@,@SPELL@,; s,@BINDIR\@,$(bindir),' $(srcdir)/joe.1.in > $@
 
 MOSTLYCLEANFILES = $(man_MANS)
 
