--- a/rc/joerc.in
+++ b/rc/joerc.in
@@ -84,6 +84,8 @@
 
  -pg nnn	No. lines to keep for PgUp/PgDn
 
+ -undo_keep nnn	Number of undo records to keep.  0 for infinite.
+
  -csmode	^KF after a pervious search does a ^L instead
 
  -backpath path
