--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@ noinst_HEADERS = b.h blocks.h bw.h cmd.h config.h hash.h help.h kbd.h \
 	scrn.h tab.h termcap.h tty.h tw.h types.h ublock.h uedit.h uerror.h \
 	ufile.h uformat.h uisrch.h umath.h undo.h usearch.h ushell.h utag.h \
 	utils.h va.h vfile.h vs.h w.h utf8.h syntax.h i18n.h charmap.h mouse.h \
-	lattr.h gettext.h
+	lattr.h gettext.h builtin.h
 
 bin_PROGRAMS = joe termidx
 INCLUDES = -DJOERC="\"$(sysconf_joedir)/\""
