--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@ noinst_HEADERS = b.h blocks.h bw.h cmd.h config.h hash.h help.h kbd.h \
 	scrn.h tab.h termcapj.h tty.h tw.h types.h ublock.h uedit.h uerror.h \
 	ufile.h uformat.h uisrch.h umath.h undo.h usearch.h ushell.h utag.h \
 	utils.h vfile.h w.h utf8.h syntax.h i18n.h charmap.h mouse.h \
-	lattr.h gettext.h obj.h builtin.h
+	lattr.h gettext.h obj.h builtin.h coroutine.h
 
 bin_PROGRAMS = joe termidx
 INCLUDES = -DJOERC="\"$(sysconf_joedir)/\""
@@ -31,7 +31,7 @@ joe_SOURCES = b.c blocks.c bw.c cmd.c hash.c help.c kbd.c macro.c main.c menu.c 
 	tty.c tw.c ublock.c uedit.c uerror.c ufile.c uformat.c uisrch.c umath.c \
 	undo.c usearch.c ushell.c utag.c vfile.c w.c utils.c syntax.c \
 	utf8.c selinux.c i18n.c charmap.c mouse.c lattr.c gettext.c builtin.c \
-	builtins.c obj.c
+	builtins.c obj.c coroutine.c
 
 termidx_SOURCES = termidx.c
 
