Apply two years of good user supplied patches.  See NEWS file for details.

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -2,6 +2,6 @@ sysconf_joedir = $(sysconfdir)/joe
 
 sysconf_langdir = $(sysconf_joedir)/lang
 
-sysconf_lang_DATA = ru.po de.po fr.po
+sysconf_lang_DATA = ru.po de.po fr.po uk.po
 
 EXTRA_DIST = $(sysconf_lang_DATA)
