--- a/rc/joerc.in
+++ b/rc/joerc.in
@@ -284,6 +284,8 @@
 
 	-wordwrap		Wordwrap
 
+	-nobackup		If you don't want backup file to be created
+
 	-autoindent		Auto indent
 
 	-overwrite		Overtype mode
