--- a/rc/jpicorc.in
+++ b/rc/jpicorc.in
@@ -273,6 +273,8 @@
 
 	-wordwrap		Wordwrap
 
+	-nobackup		If you don't want backup file to be created
+
 	-autoindent		Auto indent
 
 	-overwrite		Overtype mode
