--- a/syntax/verilog.jsf.in
+++ b/syntax/verilog.jsf.in
@@ -152,7 +152,7 @@ done
 :string_control Escape
 	*		string_control
 	"\n"		reset
-	"diouxXeEfFgGaAcspn%SC"	string
+	"efghdobcvstmEFGHDOBCVSTM%"	string
 
 # Identifiers
 
