--- a/rc/joerc.in
+++ b/rc/joerc.in
@@ -71,6 +71,12 @@
  -nobackups	If you don't want backup files to be created
 
  -break_links	Delete file before writing, to break hard links
+		(but don't break symbolic links).
+
+ -break_symlinks
+		Delete file before writing, to break hard links
+		and symbolic links.
+
 
  -lightoff	Turn off highlighting after block copy or move
 
