--- a/rc/jpicorc.in
+++ b/rc/jpicorc.in
@@ -73,6 +73,11 @@
  -nobackups	If you don't want backup files to be created
 
  -break_links	Delete file before writing, to break hard links
+		(but don't break symbolic links).
+
+ -break_symlinks
+		Delete file before writing, to break hard links
+		and symbolic links.
 
 -exask		^KX always confirms file name
 
