--- a/rc/jstarrc.in
+++ b/rc/jstarrc.in
@@ -62,6 +62,12 @@
  -nocurdir	Do not prompt with current directory
  -nobackups	If you don't want backup files to be created
  -break_links	Delete file before writing, to break hard links
+		(but don't break symbolic links).
+
+ -break_symlinks
+		Delete file before writing, to break hard links
+		and symbolic links.
+
  -lightoff	Turn off highlighting after block copy or move
  -exask		^KX always confirms file name
  -beep		Beep on errors and when cursor goes past extremes
