--- a/rc/jicerc.ru.in
+++ b/rc/jicerc.ru.in
@@ -77,13 +77,13 @@
 
  -nobackups	Если не желаете, чтобы создавались резервные файлы
 
- -break_links	Удалять файл перед записью, для разрыва жестких ссылок
+ -break_hardlinks
+		Удалять файл перед записью, для разрыва жестких ссылок
 		(but don't break symbolic links).
 
- -break_symlinks
+ -break_links
 		Delete file before writing, to break hard links
 		and symbolic links.
-
 
  -lightoff	Выключать подсветку после копирования или перемещения блока
 
