--- a/rc/jpicorc.in
+++ b/rc/jpicorc.in
@@ -72,10 +72,11 @@
 
  -nobackups	If you don't want backup files to be created
 
- -break_links	Delete file before writing, to break hard links
+ -break_hardlinks
+		Delete file before writing, to break hard links
 		(but don't break symbolic links).
 
- -break_symlinks
+ -break_links
 		Delete file before writing, to break hard links
 		and symbolic links.
 
