--- a/rc/jstarrc.in
+++ b/rc/jstarrc.in
@@ -61,10 +61,11 @@
 		(this checking happens on save even with this option).
  -nocurdir	Do not prompt with current directory
  -nobackups	If you don't want backup files to be created
- -break_links	Delete file before writing, to break hard links
+ -break_hardlinks
+		Delete file before writing, to break hard links
 		(but don't break symbolic links).
 
- -break_symlinks
+ -break_links
 		Delete file before writing, to break hard links
 		and symbolic links.
 
