--- a/man/ru/joe.1.in
+++ b/man/ru/joe.1.in
@@ -749,7 +749,7 @@ to the left or right.  Если вы попытаетесь выполнить эти команды, когда блок
 
 Например, для удаления следующих 20 строк текста нажмите:
 
-\fB^K \ 20\fR<Enter>\fB^Y\fR
+\fB^K \e\ 20\fR<Enter>\fB^Y\fR
 
 .SS Режим прямоугольных блоков
 Нажмите \fB^T X\fR если хотите, чтобы по \fB^K B\fR и \fB^K K\fR отмечались
