--- a/syntax/php.jsf.in
+++ b/syntax/php.jsf.in
@@ -46,6 +46,7 @@
 	"0-9"		first_digit	recolor=-1
 	"'"		string_sq	recolor=-1
 	"\""		string_dq	recolor=-1
+	"\`"		string_bq	recolor=-1
 	"a-zA-Z_"	ident		buffer
 	"$"   php_var recolor=-1
 	"-" maybe_method
@@ -98,6 +99,18 @@ done
   "\""  idle
 	"\\"		string_dq_esc	recolor=-1
 
+:var_inbqstring Var
+  *     string_bq recolor=-1
+  "a-zA-Z_" var_inbqstring
+  "\`"  idle
+	"\\"		string_bq_esc	recolor=-1
+
+:var_insqstring Var
+  *     string_sq recolor=-1
+  "a-zA-Z_" var_insqstring
+  "'" idle
+	"\\"		string_sq_esc	recolor=-1
+
 :maybe_method Methods
 	*		idle  recolor=-1
 	"?"		idle_qmark 
@@ -149,6 +162,7 @@ done
 
 :string_sq Constant_sq
 	*		string_sq
+	"$"     var_insqstring recolor=-1
 	"\'"		idle
 	"\\"		string_sq_esc	recolor=-1
 
@@ -165,6 +179,16 @@ done
 :string_dq_esc Escape
 	*		string_dq
 	"\n"		string_dq	recolor=-2
+	
+:string_bq Constant
+	*		string_bq
+	"$"     var_inbqstring recolor=-1
+	"\`"		idle
+	"\\"		string_bq_esc	recolor=-1
+
+:string_bq_esc Escape
+	*		string_bq
+	"\n"		string_bq	recolor=-2
 	
 :first_digit Constant
 	*		idle	noeat
