--- a/syntax/Makefile.am
+++ b/syntax/Makefile.am
@@ -7,6 +7,6 @@ sysconf_syntax_DATA = c.jsf perl.jsf verilog.jsf conf.jsf python.jsf php.jsf sh.
 	lisp.jsf csh.jsf mason.jsf diff.jsf asm.jsf tex.jsf css.jsf ocaml.jsf \
 	4gl.jsf sml.jsf sql.jsf awk.jsf cobol.jsf sed.jsf ps.jsf ada.jsf \
 	troff.jsf haskell.jsf rexx.jsf skill.jsf lua.jsf ruby.jsf m4.jsf joerc.jsf \
-	spec.jsf matlab.jsf
+	spec.jsf matlab.jsf jsf.jsf jsf_check.jsf
 
 EXTRA_DIST = $(sysconf_syntax_DATA)
