Make mail.jsf a little more forgiving.

--- a/syntax/mail.jsf.in
+++ b/syntax/mail.jsf.in
@@ -26,7 +26,11 @@
 
 :first Idle
 	*		hbol		noeat
-	"\n"		nohead
+	"\n"		newline
+	">|:~}#]"	newline		noeat
+
+# Require header
+#	"\n"		nohead
 
 :nohead HdBad
 	*		nohead
@@ -35,6 +39,7 @@
 	*		hbad		recolor=-1
 	"\n"		newline
 	"A-Z"		bufhdrs		buffer
+	"-"		newline		noeat
 
 :hbad HdBad
 	*		hbad
