Fix TeX highligher.  Don't use bold yellow in jsf highlighter.

--- a/syntax/jsf.jsf.in
+++ b/syntax/jsf.jsf.in
@@ -38,7 +38,7 @@
 =Parameter	bold blue
 =Keyword	bold
 =Color		yellow
-=StandardColor	bold yellow
+=StandardColor	bold
 =State
 =Subr		magenta
 =Literal	cyan
